force-app/main/default/objects/Lancamento_Financeiro__c/Lancamento_Financeiro__c.object-meta.xml
<CustomObject>
    <label>Lançamento Financeiro</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lançamentos Financeiros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>