force-app/main/default/objects/Lancamento_Financeiro__c/fields/Data_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Lancamento__c</fullName>
    <label>Data Lançamento</label>
    <type>Date</type>
</CustomField>