force-app/main/default/objects/Lancamento_Financeiro__c/fields/Id_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Id_Lancamento__c</fullName>
    <label>Id Lançamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>