force-app/main/default/objects/Lancamento_Financeiro__c/fields/Nome_Conta__c.field-meta.xml
<CustomField>
    <fullName>Nome_Conta__c</fullName>
    <formula>LEFT( Processo_Judicial__r.Cliente_Principal__c , FIND(&quot; &quot;, Processo_Judicial__r.Cliente_Principal__c) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Conta</label>
    <type>Text</type>
</CustomField>