force-app/main/default/objects/Lancamento_Financeiro__c/fields/Processo_Judicial__c.field-meta.xml
<CustomField>
    <fullName>Processo_Judicial__c</fullName>
    <label>Processo Judicial</label>
    <referenceTo>Processo_Judicial__c</referenceTo>
    <relationshipLabel>Lançamentos Financeiros</relationshipLabel>
    <relationshipName>Lan_amentos_Financeiros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>