force-app/main/default/objects/Lancamento_Financeiro__c/fields/Tipo_de_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Lancamento__c</fullName>
    <label>Tipo de Lançamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>