force-app/main/default/objects/Lancamento_Financeiro__c/fields/Valor_Baixa__c.field-meta.xml
<CustomField>
    <fullName>Valor_Baixa__c</fullName>
    <label>Valor Baixa</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>