force-app/main/default/objects/Lancamento_Financeiro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Processo_Judicial__c</columns>
    <columns>Data_Lancamento__c</columns>
    <columns>Data_Vencimento__c</columns>
    <columns>Tipo_de_Lancamento__c</columns>
    <columns>Valor__c</columns>
    <columns>Valor_Baixa__c</columns>
    <columns>Tipo_de_Lan_amento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>